# ytxd

./: .gitignore  README.md  pyproject.toml  testing.sh
src/ytxd/: __init__.py  dependencies.py  download.py  main.py  media_formats.py  url.py
tests/: cleanup.py  test_audio_app.py  test_info_app.py  test_video_app.py
