[project]
name = "ytxd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-slugify>=8.0.4",
    "typer>=0.12.5",
    "yt-dlp>=2024.10.7",
]

[project.scripts]
ytxd = "ytxd.main:app"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pytest>=8.3.3", "ruff>=0.7.0"]
